# zero-to-production

./: .env  Cargo.toml  Dockerfile  cmds.txt  general.yml  readme.md  spec.yaml  sqlx-data.json  x
.github/workflows/: main.yml
configuration/: base.yaml  production.yaml
migrations/: 20220717063616_seed_user.sql
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/newsletter/: post.rs
tests/: tests.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs
