[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
"actix-web"="*"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
serde = { version = "*", features = ["derive"]}
sqlx = { version = "*", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "*", features = ["v4", "serde"] }
chrono="*"
# log="*"
config="*"
# env_logger="*"
tracing = { version = "*", features = ["log"] }
tracing-subscriber = { version = "*", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "*"
tracing-log = "*"
once_cell="*"
secrecy = { version = "*", features = ["serde"] }
tracing-actix-web="*"
serde-aux = "*"
unicode-segmentation = "*"
validator="*"
rand = { version = "*", features=["std_rng"] }
thiserror="*"
anyhow="*"
base64="*"
sha3="*"
argon2 = { version = "*", features = ["std"] }
actix-web-flash-messages = { version = "*", features = ["cookies"] }
actix-session = { version = "*", features = ["redis-rs-tls-session"] }
serde_json = "*"
actix-web-lab="*"
reqwest = { version = "*", default-features = false, features = ["json", "rustls-tls","cookies"] }

[dev-dependencies]
# reqwest = { version = "*", features = ["json"] }
claim = "*"
# quickcheck = "0.9.2"
# quickcheck_macros = "0.9.1"
fake = "*"
once_cell = "*"
wiremock="*"
serde_json="*"
serde_urlencoded = "*"
linkify="*"
urlencoding="*"
htmlescape="*"
hmac = { version = "*", features = ["std"] }
# sha2 = "*"
# hex="*"
